some stuff and notepad crash fix